--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Another Branche Code</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
   </head>
   <body>
     <!-- HEADER SECTION STARTS -->
@@ -31,16 +30,6 @@
       </nav>
     </header>
     <!-- HEADER SECTION ENDS -->
-<!-- TOP HERO SECTION -->
-<section class="max-w-[1200px] w-full px-5">
-  <div class="flex justify-center items-center p-5 md:p-10">
-    <h1
-      class="text-2xl md:text-4xl text-center w-full md:w-[70%] font-medium m-0"
-    >
-      I am a Web Developer. Support on my Development Journey.
-    </h1>
-  </div>
-</section>
 
     <script src="script.js"></script>
   </body>
